fixed dark mode problems

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
         --main-bg: #ffcdd4;
         --accent: #e57d90;
         --readable-bg: whitesmoke;
-        --readable-font: whitesmoke;
+        --readable-font: rgb(0, 0, 0);
         --main-font: 'Montserrat', sans-serif;
         --accent-font-color: rgb(238, 88, 163);
     }
@@ -38,6 +38,10 @@
         position: sticky;
         background-color: var(--accent);
         padding: 5px 5px;
+    }
+
+    .header * {
+        background-color: inherit;
     }
 
     .header-wrapper {
@@ -80,6 +84,7 @@
     }
 
     .hero-header {
+        background-color: transparent;
         font-size: 3rem;
         font-weight: 900;
         color: var(--accent-font-color);
@@ -146,11 +151,15 @@
         border-radius: 40px;
         box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.112);
         transition: transform 0.3s ease;
-
+        color:
     }
 
     .explainer>div:hover {
         transform: scale(1.1);
+    }
+
+    .explainer>div * {
+        background-color: inherit;
     }
 
     .explainer>div>img {
@@ -162,10 +171,12 @@
 
     .explainer-title {
         font-weight: 900;
+        color: var(--readable-font);
     }
 
     .explainer-description {
         font-size: 0.5rem;
+        color: var(--readable-font);
     }
 
     .cta {
@@ -192,6 +203,10 @@
     .footer {
         background-color: var(--accent);
         padding: 5px;
+    }
+
+    .footer * {
+        background-color: inherit;
     }
 
     .footer-text {
